--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -1,6 +1,8 @@
 name: Fetching Data
 
 on:
+  push:
+    branches: [ "master" ]
   schedule:
 #    - cron: 35 11 * * * # 6:35 PM in Vietnam
     - cron: "*/3 * * * *"
