--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches: [ "master" ]
   schedule:
-#    - cron: 35 11 * * * # 6:35 PM in Vietnam
-    - cron: "*/3 * * * *"
+    - cron: 35 11 * * * # 6:35 PM in Vietnam
+#    - cron: "*/3 * * * *"
 
 jobs:
   fetch-data:
