--- a/.github/workflows/fetch-data.yml
+++ b/.github/workflows/fetch-data.yml
@@ -24,11 +24,11 @@ jobs:
         run: |
           pip install -r requirements.txt
 
-      - name: fetch data
-        run: python src/fetch.py
-
-      - name: analyze data
-        run: python src/analyze.py
+#      - name: fetch data
+#        run: python src/fetch.py
+#
+#      - name: analyze data
+#        run: python src/analyze.py
 
       - name: notify telegram
         run: python src/notification.py
