--- a/.github/workflows/fetch-data.yml
+++ b/.github/workflows/fetch-data.yml
@@ -25,14 +25,14 @@ jobs:
         run: |
           pip install -r requirements.txt
 
-#      - name: fetch data
-#        run: python src/fetch.py
-#
-#      - name: analyze data
-#        run: python src/analyze.py
+      - name: fetch data
+        run: python src/fetch.py
+
+      - name: analyze data
+        run: python src/analyze.py
 
       - name: notify telegram
-        env:
+        env:g
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: python src/notification.py
