--- a/.github/workflows/send-noti.yml
+++ b/.github/workflows/send-noti.yml
@@ -10,6 +10,7 @@ jobs:
   send-notification:
     runs-on: ubuntu-24.04
     environment: secrets
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: checkout repo content
         uses: actions/checkout@v4
